adds nuget packages e first configurations

--- a/BackgroundJobs.Api/appsettings.json
+++ b/BackgroundJobs.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDb": "Data Source=app.db",
+    "HangfireDb": "Data Source=hangfire.db"
+  }
 }
