--- a/BackgroundJobs.Api/BackgroundJobs.Api.csproj
+++ b/BackgroundJobs.Api/BackgroundJobs.Api.csproj
@@ -19,4 +19,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
